[tool.poetry]
name = "flask_app"
version = "0.1.0"
description = ""
authors = ["heso"]

[tool.poetry.dependencies]
python = "~=3.10"
flask = "~=3.0.3"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
ruff = "~=0.6.7"
pytest = "~=8.3.3"
pytest-cov = "~=5.0.0"
pytest-env = "^1.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.report]
omit = ["tests/*"]

[tool.pytest.ini_options]
addopts = "-ra -q --cov-report term-missing:skip-covered --cov . --cov-branch"
env = [
    "DB_NAME=test_tasks.json",
]

[tool.ruff]
line-length = 119
output-format = "grouped"
show-fixes = true
target-version = "py37"
exclude = [".svn", "CVS", ".bzr", ".hg",".git", "__pycache__", ".tox", ".eggs", "*.egg", ".venv", "env", "venv", "build"]

[tool.ruff.lint]
select = ["W", "E", "F", "I", "N", "DJ", "T20", "Q"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.mccabe]
max-complexity = 6